fix: auf richtiges Element das overflow-y

--- a/bin/controls/reference/WindowShort.css
+++ b/bin/controls/reference/WindowShort.css
@@ -13,9 +13,6 @@
 
 .quiqqer-porfolio-reference-windowShort .content {
     overflow-y: auto;
-}
-
-.quiqqer-porfolio-reference-windowShort .content {
     padding: 20px;
 }
 
